# biblexity

./: .gitignore  README.md  pyproject.toml
biblexity/: configuration.py  utils.py
biblexity/api/: io_types.py  main.py
biblexity/api/routers/: query.py  sessions.py  verses.py
biblexity/chainlit/: cl_app.py
biblexity/core/: agent_query.py  bible_data.py  prompt_reader.py  session.py
biblexity/core/retrieval/: indexing.py
biblexity/models/: __init__.py  custom_embeddings.py  custom_llms.py
configs/: app.conf
notebooks/: sandbox.ipynb
resources/prompts/agent_query/: query.prt  system.prt
