[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["biblexity", "biblexity.*"]

[tool.setuptools.dynamic]
version = {attr = "biblexity.__version__"}

[project]
name = "biblexity"
description = "Query bible verse with natural language"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "RAG",
    "Retrieval",
    "LLM",
    "Finetuning",
    "artificial-intelligence",
    "nlp",
    "machine-learning",
    "transformers"
]
authors = [
    {name = "Aurel AVOMO"}
]

maintainers = [
    {name = "Aurel AVOMO"}
]

dependencies = [
    "chainlit==1.3.2",
    "pydantic==2.10.1",
    "langchain==0.3.12",
    "langchain-openai==0.2.1",
    "chromadb==0.5.23",
    "langchain-chroma>=0.1.2",
    "langchain-ollama==0.2.2",
    "ollama==0.4.4",
    "pandas==2.2.3",
    "jinja2==3.1.4"
]

dynamic = ["version"]

[project.optional-dependencies]
finetuning = [
    "datasets==3.2.0",
    "torch==2.5.1+cu12",
    "tensorboard==2.18.0",
    "sentence-transformers==3.3.1",
    "transformers==4.47.1",
    "einops"
]

[project.scripts]
biblexity = "biblexity.api.main:main"